--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,8 @@ font-style: normal;
                         <i class="seperator"></i>
                         <a href="#" target="_blank">Sitemap</a>
                     	<i class="seperator"></i>
+                        <a href="Privacy-Policy.html">privacy</a>
+                        <i class="seperator"></i>
                         <a href="admissions.html">Admission</a>
                         <i class="seperator"></i>
                         <a href="#">Student</a>
