--- a/index.html
+++ b/index.html
@@ -1057,9 +1057,9 @@ font-style: normal;
             <span class="logo"><img style="border-radius: 100%" height="83px" width="auto" src="img/DLSC_Logo_1x1_small.png" alt=""></span>
            <div class="row">
                 <!--<div class="col-sm-4 address">-->
-			<center>	<p>
+				<p style="text-align: center;">
                     <strong>Address : </strong>c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
-				</p> </center>
+				</p>
                 <!--</div>-->
                 <!--<div class="col-sm-4 links">-->
                <p style="text-align: center;">
