--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@ font-style: normal;
                         <i class="seperator"></i>
                         <a href="#" target="_blank">Sitemap</a>
                     	<i class="seperator"></i>
-                        <a href="Privacy-Policy.html">privacy</a>
+                        <a href="Privacy-Policy.html">Privacy</a>
                         <i class="seperator"></i>
                         <a href="admissions.html">Admission</a>
                         <i class="seperator"></i>
