--- a/gallery.html
+++ b/gallery.html
@@ -493,6 +493,21 @@ body {
                                 <img src="img/gallery/14.JPG" alt="">
                             </div>
                         </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/16.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/17.jpeg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/18.png" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
