--- a/gallery.html
+++ b/gallery.html
@@ -404,7 +404,7 @@ body {
 
                         <div class="col-sm-6 col-lg-4 ,grid">
                             <div class="img-box">
-                                <img src="img/gallery/15.jpg" alt="">
+                                <img src="img/gallery/15.jpeg" alt="">
                             </div>
                         </div>
 
