--- a/gallery.html
+++ b/gallery.html
@@ -427,6 +427,12 @@ body {
 
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
+                                <img src="img/gallery/19.png" alt="">
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
                                 <img src="img/gallery/15.png" alt="">
                             </div>
                         </div>
