--- a/gallery.html
+++ b/gallery.html
@@ -470,6 +470,11 @@ body {
     </div>
   </div>
 </div>
+                        </div>
+                    </section>
+                    <br>
+                    <br>
+                    <br>
                     <div class="row">
 
                         <div class="col-sm-6 col-lg-4">
