--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/waves.min.css">
 </head>
 
 <body id="gallery">
