--- a/index.html
+++ b/index.html
@@ -302,18 +302,18 @@ font-style: normal;
                                     <li><a href="Under_Construction.html">Academic Staff</a></li>
                                 </ul>
                             </li-->
-                            <!--li>
+                            <li>
                                 <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OLD BOYS UNION <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="obu.html">Overview</a></li>
-                                    <li><a href="OBU-Constitution.html">OBU Constitution</a></li>
-                                    <li><a href="Under_Construction.html">Coming soon</a></li>
-                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="obu.html">OVERVIEW</a></li>
+                                    <li><a href="OBU-Constitution.html">OBU INTRODUCTION</a></li>
+                                    <li><a href="Under_Construction.html">OBU CONSTITUTION</a></li>
+                                    <li><a href="Under_Construction.html">ANNOUNCEMENTS</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
-                            </li-->
+                            </li>
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">EXTRA CURRICULAR <b
                                         class="caret"></b></a>
