--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@ font-style: normal;
                                 <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OLD BOYS UNION <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="obu.html">OVERVIEW</a></li>
-                                    <li><a href="OBU-Constitution.html">OBU INTRODUCTION</a></li>
-                                    <li><a href="Under_Construction.html">OBU CONSTITUTION</a></li>
+                                    <li><a href="Old-Boys-Union.html">OBU INTRODUCTION</a></li>
+                                    <li><a href="OBU-Constitution.html">OBU CONSTITUTION</a></li>
                                     <li><a href="Under_Construction.html">ANNOUNCEMENTS</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
