--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ font-style: normal;
         background-size: cover;
         margin-top: 0;
         padding-top: 0;
-        background: url(bg-main.jpg) no-repeat center;
+        background: url(img/Meta/thumbnailhead.jpg) no-repeat center;
         background-size: cover;
         height: 100vh;
         position: relative;
