--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 @font-face {
 font-family: 'unicons';
-src: url('../fonts/unicons.ttf') format('truetype');
+src: url('fonts/unicons.ttf') format('truetype');
 font-weight: normal;
 font-style: normal;
 }
