--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         background-size: cover;
         margin-top: 0;
         padding-top: 0;
-        background: url(img/Meta/thumbnailhead.jpg) no-repeat center;
+        background: url(img/faded-monaco-scenery-evening-dark-picjumbo-com-image.jpg) no-repeat center;
         background-size: cover;
         height: 100vh;
         position: relative;
