--- a/view-events.html
+++ b/view-events.html
@@ -92,9 +92,9 @@
                         </div>
                     </div>
                     <div class="header-links">
-                        <a id="loc_icon" href="#" data-toggle="popover" title="Address" data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
+                        <a id="loc_icon" href="#" data-toggle="popover" title="Address" data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="false"></i></a>
                         <a id="phone_icon" href="tel:0112522125" data-toggle="popover" title="Phone No." data-content="+94 112 522 125" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
-                        <a id="email_icon" href="mailto:college.lk" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+                        <a id="email_icon" href="mailto:college@delasalle.lk" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
 
                     </div>
                 </div>
