--- a/view-events.html
+++ b/view-events.html
@@ -1,6 +1,7 @@
+
 <!--
  * Official Website of De La Salle College, Colombo-15
- * A project of DLS COLLEGE
+ * A project of SJC ICTS 2021 Batch
  * Design & Develop by : Kasun Chanuka Fernando,
 -->
 
@@ -10,67 +11,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events | De La Salle College, Colombo - "Indivisa Manent"</title>
-    
-    <!--favicon-->
-<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-<link rel="manifest" href="favicon/site.webmanifest">
-
-   <!--Style Starts-->
+    <title>De La Salle College Colombo 15 | About</title>
+    <!--Style Starts-->
+    <link rel="icon" type="image/png" href="img/DLSC_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
-    <!--Site Meta-->
-
-    <meta property="og:locale" content="en_GB" />
-    <meta property="og:site_name" content="De La Salle College,Colombo - Indivisa Manent" />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Events | De La Salle College, Colombo - Indivisa Manent" />
-    <meta property="og:url" content="https://www.delasalle.lk/" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
-    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
-    <meta property="og:image:width" content="1024" />
-    <meta property="og:image:height" content="567" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="" />
-    <meta name="twitter:domain" content="www.delasalle.lk" />
-    <meta name="twitter:title" content="Events | De La Salle College, Colombo - Indivisa Manent" />
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
-
-    <!-- Primary Meta Tags -->
-<meta name="title" content="Events | De La Salle College, Colombo - Indivisa Manent">
-<meta name="description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://delasalle.lk">
-<meta property="og:title" content="Events | De La Salle College, Colombo - Indivisa Manent">
-<meta property="og:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
-<meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg">
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://delasalle.lk">
-<meta property="twitter:title" content="Events | De La Salle College, Colombo - Indivisa Manent">
-<meta property="twitter:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
-<meta property="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg">
-
-
 </head>
 
 <body>
-  <div class="loader_bg">
-    <div class="loader"></div>
-</div>
-<div class="progress-wrap">
-    <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-        <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
-    </svg>
-</div>
     <!-- Start Your Body Code From here -->
     <div class="wrapper">
         <!-- header starts here -->
@@ -93,8 +43,8 @@
                     </div>
                     <div class="header-links">
                         <a id="loc_icon" href="#" data-toggle="popover" title="Address" data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
-                        <a id="phone_icon" href="tel:0112522125" data-toggle="popover" title="Phone No." data-content="+94 112 522 125" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
-                        <a id="email_icon" href="mailto:college@delasalle.lk" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+                        <a id="phone_icon" href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
+                        <a id="email_icon" href="#" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
 
                     </div>
                 </div>
@@ -1565,53 +1515,6 @@ all and (min-device-pixel-ratio:1.5) {
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/434d359724.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script>
-        setTimeout(function(){
-            $('.loader_bg').fadeToggle();
-        }, 1500);
-    </script>
-    <script>
-			$(document).ready(function() {
-				var progressPath = document.querySelector('.progress-wrap path');
-				var pathLength = progressPath.getTotalLength();
-
-				progressPath.style.transition = progressPath.style.WebkitTransition = 'none';
-				progressPath.style.strokeDasharray = pathLength + ' ' + pathLength;
-				progressPath.style.strokeDashoffset = pathLength;
-				progressPath.getBoundingClientRect();
-				progressPath.style.transition = progressPath.style.WebkitTransition = 'stroke-dashoffset 10ms linear';
-
-				var updateProgress = function() {
-					var scroll = $(window).scrollTop();
-					var height = $(document).height() - $(window).height();
-					var progress = pathLength - (scroll * pathLength / height);
-					progressPath.style.strokeDashoffset = progress;
-				}
-
-				updateProgress();
-				$(window).scroll(updateProgress);
-
-				var offset = 50;
-				var duration = 550;
-
-				jQuery(window).on('scroll', function() {
-					if(jQuery(this).scrollTop() > offset) {
-						jQuery('.progress-wrap').addClass('active-progress');
-					} else {
-						jQuery('.progress-wrap').removeClass('active-progress');
-					}
-				});
-
-				jQuery('.progress-wrap').on('click', function(event) {
-					event.preventDefault();
-					jQuery('html, body').animate({scrollTop: 0}, duration);
-					return false;
-				})
-			});
-		</script>
     <script>
     $(document).on('click', function (e) {
     var
