--- a/The-Coat-of-Arms.html
+++ b/The-Coat-of-Arms.html
@@ -374,13 +374,34 @@
         }, 1500);
     </script>
 <script>
-    $(document).ready(function () {
-        $('[data-toggle="popover"]').popover();
-        $('[data-toggle="popover"]').on('click', function (e) {
-            $('[data-toggle="popover"]').not(this).popover('hide');
-        });
+    $(document).on('click', function (e) {
+    var
+        $popover,
+        $target = $(e.target);
+
+    //do nothing if there was a click on popover content
+    if ($target.hasClass('popover') || $target.closest('.popover').length) {
+        return;
+    }
+
+    $('[data-toggle="popover"]').each(function () {
+        $popover = $(this);
+
+        if (!$popover.is(e.target) &&
+            $popover.has(e.target).length === 0 &&
+            $('.popover').has(e.target).length === 0)
+        {
+            $popover.popover('hide');
+        } else {
+            //fixes issue described above
+            $popover.popover('toggle');
+        }
     });
-</script>
+})
+
+  
+
+    </script>
 </body>
 
 </html>
