--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,7 @@
 				})
 			});
 		</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
         setTimeout(function(){
             $('.loader_bg').fadeToggle();
