--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,9 @@
         </div>
     </footer>
 </div>
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+
+<!--Scripts Starts-->
+<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="https://use.fontawesome.com/434d359724.js"></script>
 <script src="js/main.js"></script>
@@ -1141,7 +1143,7 @@
         }, 1500);
     </script>
 <script>
-$(document).on('click', function (e) {
+    $(document).on('click', function (e) {
     var
         $popover,
         $target = $(e.target);
@@ -1163,6 +1165,7 @@ $(document).on('click', function (e) {
             //fixes issue described above
             $popover.popover('toggle');
         }
+
     });
 })
 </script><script type="text/javascript" src="js/jquery.paginate.min.js "></script>
