--- a/Co-curiiicular-Activities.html
+++ b/Co-curiiicular-Activities.html
@@ -331,11 +331,11 @@
         </div>
     </footer>
 </div>
+
 <!--Scripts Starts-->
 <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script src="https://use.fontawesome.com/434d359724.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script>
 			$(document).ready(function() {
 				var progressPath = document.querySelector('.progress-wrap path');
@@ -375,20 +375,40 @@
 				})
 			});
 		</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
         setTimeout(function(){
             $('.loader_bg').fadeToggle();
         }, 1500);
     </script>
 <script>
-    $(document).ready(function () {
-        $('[data-toggle="popover"]').popover();
-        $('[data-toggle="popover"]').on('click', function (e) {
-            $('[data-toggle="popover"]').not(this).popover('hide');
-        });
+    $(document).on('click', function (e) {
+    var
+        $popover,
+        $target = $(e.target);
+
+    //do nothing if there was a click on popover content
+    if ($target.hasClass('popover') || $target.closest('.popover').length) {
+        return;
+    }
+
+    $('[data-toggle="popover"]').each(function () {
+        $popover = $(this);
+
+        if (!$popover.is(e.target) &&
+            $popover.has(e.target).length === 0 &&
+            $('.popover').has(e.target).length === 0)
+        {
+            $popover.popover('hide');
+        } else {
+            //fixes issue described above
+            $popover.popover('toggle');
+        }
     });
-</script>
+})
+
+  
+
+    </script>
 </body>
 
 </html>
