--- a/Academics.php.html
+++ b/Academics.php.html
@@ -57,13 +57,10 @@
                     </div>
                 </div>
                 <div class="header-links">
-                    <a href="#" data-toggle="popover" title="Address"
-                       data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka"
-                       data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
-                    <a href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281"
-                       data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
-                    <a href="#" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in"
-                       data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+                    <a id="loc_icon" href="#" data-toggle="popover" title="Address" data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
+                    <a id="phone_icon" href="#" data-toggle="popover" title="Phone No." data-content="+94 112 522 125" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
+                    <a id="email_icon" href="#" data-toggle="popover" title="Email" data-content="College@delasalle.lk" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+
                 </div>
             </div>
         </div>
