--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
       @media only screen and (width: 1024px) {
         .wrallet {
-          background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg);
+          background-image: url(College\ Assests/college-items/home-section.jpg);
           background-size: cover;
         }
       }
