--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 
       @media (max-width: 480px) {
         .wrallet {
-          background-image: url(https://raw.githubusercontent.com/kasuncfdo/Maintain-page-of-dls/main/homehero-mobile.jpg);
+          background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/home-sectionmob.jpg);
           background-size: cover;
         }
 
