--- a/gallery.html
+++ b/gallery.html
@@ -436,8 +436,8 @@ body {
                                                 </a>
                                             </div>
                                             <div class="col-sm-6 col-lg-4">
-                                                <a href="img/gallery/15.jpeg" class="thumbnail">
-                                                    <img src="img/gallery/15.jpeg" class="img-fluid" alt="Gallery Image">
+                                                <a href="img/gallery/1.jpg" class="thumbnail">
+                                                    <img src="img/gallery/1.jpg" class="img-fluid" alt="Gallery Image">
                                                 </a>
                                             </div>
                                             <div class="col-sm-6 col-lg-4">
