--- a/gallery.html
+++ b/gallery.html
@@ -409,6 +409,16 @@ body {
     border: 3px solid #fff;
     border-radius: 10px;
 }
+
+@media (min-width: 992px)
+.container {
+    width: 0px;
+}
+
+@media (min-width: 768px)
+.container {
+    width: 0px;
+}
     </style>
             </section>
                      <!-- Content wrapper -->
