--- a/gallery.html
+++ b/gallery.html
@@ -473,7 +473,9 @@ body {
 
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/15.jpeg" alt="">
+                                <a href="img/gallery/10.jpg" class="thumbnail">
+                                    <img src="img/gallery/10.jpg" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
 
