--- a/gallery.html
+++ b/gallery.html
@@ -543,67 +543,91 @@ body {
             
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/11.jpg" alt="">
+                                <a href="img/gallery/11.jpg" class="thumbnail">
+                                    <img src="img/gallery/11.jpg" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
 
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/3.jpg" alt="">
+                                <a href="img/gallery/3.jpg" class="thumbnail">
+                                    <img src="img/gallery/3.jpg" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
 
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/5.jpg" alt="">
+                                <a href="img/gallery/5.jpg" class="thumbnail">
+                                    <img src="img/gallery/5.jpg" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
 
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/6.jpg" alt="">
+                                <a href="img/gallery/6.jpg" class="thumbnail">
+                                    <img src="img/gallery/6.jpg" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
 
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/8.jpg" alt="">
+                                <a href="img/gallery/7.jpg" class="thumbnail">
+                                    <img src="img/gallery/7.jpg" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
                         
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/9.jpg" alt="">
+                                <a href="img/gallery/9.jpg" class="thumbnail">
+                                    <img src="img/gallery/9.jpg" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/10.jpg" alt="">
+                                <a href="img/gallery/10.jpg" class="thumbnail">
+                            <img src="img/gallery/10.jpg" class="img-fluid" alt="Gallery Image">
+                        </a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/13.png" alt="">
+                                <a href="img/gallery/13.png" class="thumbnail">
+                                    <img src="img/gallery/13.png" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/14.JPG" alt="">
+                                <a href="img/gallery/14.JPG" class="thumbnail">
+                                    <img src="img/gallery/14.JPG" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/16.png" alt="">
+                                <a href="img/gallery/16.png" class="thumbnail">
+                                    <img src="img/gallery/16.png" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/17.jpeg" alt="">
+                                <a href="img/gallery/17.jpeg" class="thumbnail">
+                                    <img src="img/gallery/17.jpeg" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <img src="img/gallery/18.png" alt="">
+                                <a href="img/gallery/18.png" class="thumbnail">
+                                    <img src="img/gallery/18.png" class="img-fluid" alt="Gallery Image">
+                                </a>
                             </div>
                         </div>
                     </div>
