--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -220,18 +220,18 @@
                                         <li><a href="Under_Construction.html">Academic Staff</a></li>
                                     </ul>
                                 </li-->
-                                <!--li>
+                                <li>
                                     <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OLD BOYS UNION <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="obu.html">Overview</a></li>
-                                        <li><a href="OBU-Constitution.html">OBU Constitution</a></li>
-                                        <li><a href="Under_Construction.html">Coming soon</a></li>
-                                        <li><a href="Under_Construction.html">Coming soon</a></li>
+                                        <li><a href="obu.html">OVERVIEW</a></li>
+                                        <li class="active"><a href="Old-Boys-Union.html">OBU INTRODUCTION</a></li>
+                                        <li><a href="OBU-Constitution.html">OBU CONSTITUTION</a></li>
+                                        <li><a href="Under_Construction.html">ANNOUNCEMENTS</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                     </ul>
-                                </li-->
+                                </li>
                                 <li>
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">EXTRA CURRICULAR <b
                                             class="caret"></b></a>
