--- a/obu.html
+++ b/obu.html
@@ -215,10 +215,10 @@
                                 <li>
                                     <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OLD BOYS UNION <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="obu.html">Overview</a></li>
-                                        <li><a href="OBU-Constitution.html">OBU Constitution</a></li>
-                                        <li><a href="Under_Construction.html">Coming soon</a></li>
-                                        <li><a href="Under_Construction.html">Coming soon</a></li>
+                                        <li><a href="obu.html">OVERVIEW</a></li>
+                                        <li><a href="Old-Boys-Union.html">OBU INTRODUCTION</a></li>
+                                        <li><a href="OBU-Constitution.html">OBU CONSTITUTION</a></li>
+                                        <li><a href="Under_Construction.html">ANNOUNCEMENTS</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
                                         <li><a href="Under_Construction.html">Coming soon</a></li>
