--- a/gallery.html
+++ b/gallery.html
@@ -479,8 +479,8 @@ body {
 
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
-                                <a href="img/gallery/10.jpg" class="thumbnail">
-                                    <img src="img/gallery/10.jpg" class="img-fluid" alt="Gallery Image">
+                                <a href="img/gallery/15.jpeg" class="thumbnail">
+                                    <img src="img/gallery/15.jpeg" class="img-fluid" alt="Gallery Image">
                                 </a>
                             </div>
                         </div>
