--- a/gallery.html
+++ b/gallery.html
@@ -449,7 +449,7 @@ body {
     display: block;
     border-radius: 50px 0px 50px 0px;
     box-shadow: 0px 0px 6px 0px #777777;
-    border: 1px solid #fff;
+    /*border: 1px solid #fff;*/
 }
 .gallery-columns a img {
     transition: 1s;
