--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
     <!-- header starts here -->
     <header id="header" class="">
         <!-- header -->
+        <hr class="redline">
+        <hr class="blueline">
         <div class="header-wrapper">
             <div class="header-container">
                 <div>
