--- a/index.html
+++ b/index.html
@@ -27,6 +27,36 @@
 	  <script type="text/javascript" src="College Assests/main-infoslider/engine1/jquery.js"></script>
 	  <!-- End WOWSlider HEAD section -->
 
+      <!--SMOOTH SCROLL BEHAVIAR-->
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
+
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+   
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+});
+</script>
+
     <!--Site Meta-->
 
     <meta property="og:locale" content="en_GB" />
