--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@ $(document).ready(function(){
                <p style="text-align: center;">
                         <a href="blog.html">News</a>
                         <i class="seperator"></i>
-                        <a href="#Announcement">Announcement</a>
+                        <a href="#Announcements">Announcement</a>
                         <i class="seperator"></i>
                         <a href="view-events.html">Events</a>
                     	<i class="seperator"></i>
