--- a/blog2.html
+++ b/blog2.html
@@ -398,49 +398,71 @@ body {
                     <p></p>
             </div>
         </div>
+        <style>
+            .footer{
+  background: #152F4F;
+  color:white;
+  
+  .links{
+    ul {list-style-type: none;}
+    li a{
+      color: white;
+      transition: color .2s;
+      &:hover{
+        text-decoration:none;
+        color:#4180CB;
+        }
+    }
+  }  
+  .about-company{
+    i{font-size: 25px;}
+    a{
+      color:white;
+      transition: color .2s;
+      &:hover{color:#4180CB}
+    }
+  } 
+  .location{
+    i{font-size: 18px;}
+  }
+  .copyright p{border-top:1px solid rgba(255,255,255,.1);} 
+}
+        </style>
         <!-- Footer -->
-        <footer>
-            <div class="footer-wrapper">
-                <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
-                <div class="row">
-                    <div class="col-sm-4 address">
-                        <strong>Address : </strong>c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
-                    </div>
-                    <div class="col-sm-4 links">
-                        <div>
-                            <a href="index.html#news">News</a>
-                            <i class="seperator"></i>
-                            <a href="index.html#announcements">Announcement</a>
-                            <i class="seperator"></i>
-                            <a href="index.html#events">Events</a>
-                        </div>
-                        <div>
-                            <a href="index.html">Home</a>
-                            <i class="seperator"></i>
-                            <a href="rti.html">RTI</a>
-                            <i class="seperator"></i>
-                            <a href="pdf/MOU.pdf">MOU</a>
-                        </div>
-                        <div>
-                            <a href="admissions.html">Admission</a>
-                            <i class="seperator"></i>
-                            <a href="student_corner.html">Student</a>
-                            <i class="seperator"></i>
-                            <a href="faculty.html">Faculty</a>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 footer-social">
-                        <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
-                                        title="Official Facebook Page"></i></a>
-                        <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
-                                                              title="Github Group"></i></a>
-                        <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
-                        <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
-                                                 title="Official Twitter Account"></i></a>
-                    </div>
+        <div class="mt-5 pt-5 pb-5 footer">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-5 col-xs-12 about-company">
+                    <img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" alt="Girl in a jacket" width="auto" height="auto">
+                  <h2>Heading</h2>
+                  <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+                  <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
                 </div>
+                <div class="col-lg-3 col-xs-12 links">
+                  <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                    <ul class="m-0 p-0">
+                      <li>- <a href="#">Lorem ipsum</a></li>
+                      <li>- <a href="#">Nam mauris velit</a></li>
+                      <li>- <a href="#">Etiam vitae mauris</a></li>
+                      <li>- <a href="#">Fusce scelerisque</a></li>
+                      <li>- <a href="#">Sed faucibus</a></li>
+                      <li>- <a href="#">Mauris efficitur nulla</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-xs-12 location">
+                  <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                  <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                  <p class="mb-0"><i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
+                  <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+                </div>
+              </div>
+              <div class="row mt-5">
+                <div class="col copyright">
+                  <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+                </div>
+              </div>
             </div>
-        </footer>
+            </div>
     </div>
 
     <!--Scripts Starts-->
