--- a/blog2.html
+++ b/blog2.html
@@ -407,13 +407,12 @@ body {
 }
 
 .footer-area {
-	background: #f5f5f7 none repeat scroll 0 0;
+	background: #060658d3 none repeat scroll 0 0;
 	padding: 20px 0;
 }
 
     .footer-content ul {
 	padding: 0 3px;
-    background-color: ghostwhite;
 }
 
 .footer-content h2 {
