--- a/blog2.html
+++ b/blog2.html
@@ -401,7 +401,7 @@ body {
         <style>
     footer {
 	background: #0e2346 none repeat scroll 0 0;
-	color: #fff;
+	color: rgb(10, 3, 75);
 	font-size: 12px;
 	padding: 0.5% 0;
 }
