--- a/blog2.html
+++ b/blog2.html
@@ -448,7 +448,7 @@ body {
         <div class="footer-area">
             <div class="container">
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
-      <p style="text-align: center;">~ INDIVISA MANENT ~</p>
+      <p class="footer-content p" style="text-align: center;">~ INDIVISA MANENT ~</p>
       </div>
       <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-quicklinks1">
           <div id="block-block-13" class="block block-block">
