--- a/blog2.html
+++ b/blog2.html
@@ -400,14 +400,14 @@ body {
         </div>
         <style>
     footer {
-	background: #0e2346 none repeat scroll 0 0;
-	color: rgb(10, 3, 75);
+	background: #0a0b3b none repeat scroll 0 0;
+	color: #0a0b3b(10, 3, 75);
 	font-size: 12px;
 	padding: 0.5% 0;
 }
 
 .footer-area {
-	background: #060658d3 none repeat scroll 0 0;
+	background: #0a0b3b none repeat scroll 0 0;
 	padding: 20px 0;
 }
 
