--- a/blog2.html
+++ b/blog2.html
@@ -467,8 +467,12 @@ body {
         <div class="footer-area">
             <div class="container">
                       <div class="sidden-sm col-md-3 footer-content-logo"><img src="https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/DLS_WEBCREST.png" class="img-responsive">
-      <p class="footer-content p" style="text-align: center;">~ INDIVISA MANENT ~</p>
+                        <div class="content">
+                        <p style="text-align: center;">~ INDIVISA MANENT ~<br>
+                            De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".
+                         </p>
       </div>
+                      </div>
       <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-quicklinks1">
           <div id="block-block-13" class="block block-block">
       
