--- a/blog2.html
+++ b/blog2.html
@@ -475,7 +475,7 @@ body {
         <h2 style="text-align: center;"> "INDIVISA MANENT”</h2>
       
       <div class="content">
-        <p>De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".</p>
+        <p style="text-align: center;">De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".</p>
       </div>
     </div>
       </div>
