--- a/blog2.html
+++ b/blog2.html
@@ -529,7 +529,7 @@ body {
     
         <h2>Get in touch</h2>
       
-        <div class="col-sm-4 footer-social">
+        <div class="content">
             <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
                             title="Official Facebook Page"></i></a>
             <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
