--- a/blog2.html
+++ b/blog2.html
@@ -462,6 +462,9 @@ body {
 	color: #ffffff !important;
 }
 
+.copyright p{border-top:1px solid rgba(255,255,255,.1);
+}
+
         </style>
         <!-- Footer -->
         <div class="footer-area">
@@ -542,6 +545,10 @@ body {
     </div>
       </div>
     </div>
+    <div class="row mt-5">
+        <div class="col copyright">
+          <p class=""><small class="text-white-50">© 2021. All Rights Reserved.</small></p>
+        </div>
             </div>
         </div>
                       
