--- a/blog2.html
+++ b/blog2.html
@@ -462,7 +462,7 @@ body {
 	color: #ffffff !important;
 }
 
-.copyright p{border-top:1px solid rgba(255,255,255,.1);
+.copyright p{border-top:1px solid rgba(255, 255, 255, 0.918);
 }
 
         </style>
