--- a/blog2.html
+++ b/blog2.html
@@ -545,6 +545,8 @@ body {
     </div>
       </div>
     </div>
+        </div>
+    </br>
     <div class="row mt-5">
         <div class="col copyright">
           <p class=""><small class="text-white-50">© 2021. All Rights Reserved.</small></p>
