--- a/blog2.html
+++ b/blog2.html
@@ -472,7 +472,7 @@ body {
       <div class="col-md-3 col-sm-3 footer-content">  <div class="region region-quicklinks1">
         <div id="block-block-13" class="block block-block">
     
-        <h2 style="text-align: center;"> "INDIVISA MANENT”</h2>
+        <h2 style="text-align: center;,font: 1em sans-serif;" > "INDIVISA MANENT”</h2>
       
       <div class="content">
         <p style="text-align: center;">De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".</p>
