--- a/blog2.html
+++ b/blog2.html
@@ -400,10 +400,10 @@ body {
         </div>
         <style>
             .bullet-title a {
-	background: #0e2346;
+	background: #ffffff;
 	color: #fff;
 	display: block;
-	border: 1px solid #0e2346;
+	border: 1px solid #ffffff;
 	font-family: lato;
 	font-weight: bold;
 	padding: 7px 8px;
