--- a/blog2.html
+++ b/blog2.html
@@ -419,7 +419,7 @@ body {
 }
 
     footer {
-	background: #0a0b3b none repeat scroll 0 0;
+	background-image: url(https://raw.githubusercontent.com/kasuncfdo/Maintain-page-of-dls/main/homehero-mobile.jpg);
 	color: #0a0b3b(10, 3, 75);
 	font-size: 12px;
 	padding: 0.5% 0;
