--- a/blog2.html
+++ b/blog2.html
@@ -425,9 +425,11 @@ body {
 	padding: 0.5% 0;
 }
 
+@media (max-width: 480px) {
 .footer-area {
 	background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/img/footeroverlay.jpg);
 	padding: 20px 0;
+}
 }
 
     .footer-content ul {
