--- a/blog2.html
+++ b/blog2.html
@@ -424,6 +424,12 @@ body {
 	font-size: 12px;
 	padding: 0.5% 0;
 }
+@media only screen and (width: 1024px) {
+        .footer-area {
+          background-image: url(https://raw.githubusercontent.com/kasuncfdo/dls/main/College%20Assests/College-Items/home-section2.jpg);
+          background-size: cover;
+        }
+      }
 
 @media (max-width: 480px) {
 .footer-area {
