--- a/blog2.html
+++ b/blog2.html
@@ -189,11 +189,11 @@
             </nav>
         </header>
         <!-- /header -->
-        <div style="text-align: center;">
-                <a href="#" target="_blank"-->
+        <!--div style="text-align: center;">
+                <a href="#" target="_blank">
                     <img class="responsive-img" src="gif/about.gif">
                 </a>
-            </div>
+            </div-->
             <section>
             <style>
 
